1. File Scanner 구조변경    - stream 방식으로 기존 전체 파일을 읽어와야 하는 I/O 부하를 낮춤    - scan 한번에 최대 1000개만 limit로 메모리 부하를 낮춤